fix collapse

--- a/assets/css/collapse.sass
+++ b/assets/css/collapse.sass
@@ -3,7 +3,7 @@
 
 .collapse
   background-color: #cbcbcb
-  color: #444
+  color: #00f2ff
   cursor: pointer
   padding: 10px
   width: 100%
@@ -27,7 +27,6 @@
   display: none
   overflow: hidden
   background-color: #404040
-  margin-bottom: 8px
 
 .collapse:after
   content: '\002B'
